# ilbot-data-studio

./: .dockerignore  .env.example  Dockerfile  INSTALL.md  README.md  UPDATE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  Timeline.jsx  api.js  components.jsx  styles.css  user.jsx
frontend/src/pages/: Dashboard.jsx  Datasets.jsx  EpisodeView.jsx  Episodes.jsx  ProjectView.jsx  Projects.jsx  Users.jsx
src/robolabel/: __init__.py
src/robolabel/converter/: __init__.py  agibot.py  cli.py  video.py  writer.py
src/robolabel/server/: app.py  db.py  exporter.py  importer.py  lerobot.py
tests/: conftest.py  test_exporter.py  test_http_upload.py  test_writer_append.py
