[project]
name = "robolabel"
version = "0.1.0"
description = "Robot data labeling platform: Agibot G2 -> LeRobot v3.0 converter, dataset management, labeling"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "h5py",
    "pyarrow",
    "zstandard",
    "imageio-ffmpeg",
]

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic-settings",
    "python-multipart",
]

[project.scripts]
robolabel-convert = "robolabel.converter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robolabel"]
